# tonic-autometrics

./: Cargo.toml  README.md
.github/workflows/: check.yml
proto/: job.proto
src/: main.rs  server.rs
