[package]
name = "tonic-autometrics"
version = "0.1.0"
edition = "2021"

[dependencies]
autometrics = { version = "0.5.0", features = ["prometheus-exporter"] }
axum = "0.6.18"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"
